// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithIcon /> by default matches with snapshot 1`] = `
<div
  className="sc-htpNat dYsqxt k-Form-TextInputWithIcon"
>
  
  <input
    className="sc-bdVaJa brqohi k-Form-TextInput k-Form-TextInputWithIcon__input k-Form-TextInput--andromeda"
    disabled={false}
    name="text"
  />
  <span
    aria-hidden="true"
    className="k-Form-TextInputWithIcon__icon"
  >
    <svg
      aria-label={null}
      height={14}
      role="img"
      viewBox="-0.7 -0.7 18 18"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="7"
        cy="7"
        fill="none"
        r="7"
        stroke="#333"
        strokeWidth="1.1"
      />
      <path
        d="M13 11 L17 15 L15.5 16.5 L11.5 12.7z"
        fill="#333"
      />
    </svg>
  </span>
</div>
`;

exports[`<TextInputWithIcon /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-htpNat dYsqxt k-Form-TextInputWithIcon"
>
  
  <input
    className="sc-bdVaJa brqohi k-Form-TextInput k-Form-TextInputWithIcon__input k-Form-TextInput--andromeda k-Form-TextInput--disabled"
    disabled={true}
    name="text"
  />
  <span
    aria-hidden="true"
    className="k-Form-TextInputWithIcon__icon k-Form-TextInputWithIcon__icon--disabled"
  >
    <svg
      aria-label={null}
      height={14}
      role="img"
      viewBox="-0.7 -0.7 18 18"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="7"
        cy="7"
        fill="none"
        r="7"
        stroke="#333"
        strokeWidth="1.1"
      />
      <path
        d="M13 11 L17 15 L15.5 16.5 L11.5 12.7z"
        fill="#333"
      />
    </svg>
  </span>
</div>
`;

exports[`<TextInputWithIcon /> with props matches with snapshot 1`] = `
<div
  className="sc-htpNat dYsqxt k-Form-TextInputWithIcon"
>
  
  <input
    className="sc-bdVaJa brqohi k-Form-TextInput k-Form-TextInputWithIcon__input k-Form-TextInput--andromeda"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
  />
  <span
    aria-hidden="true"
    className="k-Form-TextInputWithIcon__icon"
  >
    <svg
      aria-label={null}
      height={14}
      role="img"
      viewBox="-0.7 -0.7 18 18"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="7"
        cy="7"
        fill="none"
        r="7"
        stroke="#333"
        strokeWidth="1.1"
      />
      <path
        d="M13 11 L17 15 L15.5 16.5 L11.5 12.7z"
        fill="#333"
      />
    </svg>
  </span>
</div>
`;
